--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <header>
   <div class="container">
   <h1> One Month Responsive<br> Design</h1>
+  <a class="link-left"href="">Get Started Now</a>
+  <a class="link-right"href="">Free Trial</a>
 </div>
 </header>
 
