--- a/index.html
+++ b/index.html
@@ -34,5 +34,14 @@
 </div>
 </header>
 
+  <div class="page-header">
+    <div class="row">
+      <div class= "citation">
+     <div class="col-sm-4"><img src="images/avatar.jpg" class="img-circle" alt="Avatar" width="160" height="160"></div>
+     <div class="col-sm-8"><p class="quote">Walmart found that for every second of website load time they cut down, it resulted in 2% more sales. Cha-ching!</p>
+       <p class="author">– Chris Castiglione, Instructor & Dean at One Month</p>
+     </div>
+   </div>
+
 </body>
 </html>
