--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
        <p class="author">– Chris Castiglione, Instructor & Dean at One Month</p>
      </div>
    </div>
+   <hr width="70%"/>
 <div class="container">
 		<div class="row">
 			<div class="col-md-4">
