ajout de la section about the course

--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
    <div class="container">
      <div class="center-video"> <img src="images/chris.jpg" alt=""></div>
    </div>
-
+  <div class="about-section">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>About the Course</h1>
+      <p>One Month Responsive Design is the next best step for taking your front-end web development skills from the beginner to intermediate level. In this course, Chris Castiglione (One Month Instructor and Dean) will teach you to write better front-end code so that you can “Code it once, and display it anywhere.”<br><br>
+        iPhone, iPad, laptop, Android, Chrome, Safari, full-screen, narrow width… the truth is that you have no idea where your Website is being viewed. And without the proper code, it’s likely to display incorrectly - resulting in some unhappy users. In this course, Chris will help you tackle those tough questions of HTML & CSS best-practices and code optimization so that you can build something awesome that <strong>lasts</strong> forever! (...or at the very least a really, really long time).<br><br>
+        This course requires a basic working knowledge of HTML and CSS. Need a refresher? Check out Chris’s other course: One Month <span class="HTML">HTML</span>!
+      </p>
+    </div>
+  </div>
+</div>
    <hr width="70%"/>
 <div class="container">
 		<div class="row">
