--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
   </div>
 </div>
-   <hr width="70%"/>
+  <div class="divider"></div>
 <div class="container">
 		<div class="row">
 			<div class="col-md-4">
@@ -99,7 +99,7 @@
 		</div>
 	</div>
 
-	<hr width="70%"/>
+  <div class="divider"></div>
 
 	<div class="container">
 		<div class="image">
