finalisation de la section copyright

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
    </div>
 
  </div>
+ </div>
 
    <div class="container">
      <div class="center-video"> <img src="images/chris.jpg" alt=""></div>
@@ -119,5 +120,29 @@
 	<div>
 
 	</div>
+
+  <div class="background-footer">
+  <div class="container">
+      <h3> Enroll today for just $49! <button type="button" class="btn btn-primary btn-lg">Get Started Now</button></h3>
+  </div>
+  </div>
+
+  <div class="container-fluid">
+  <div class="padding-last">
+      <div class="col-md-4 title black"><h4>One Month</h4> <p>| Building a better way to learn.</p> </div>
+      <div class="col-md-8">
+        <ul class=" black nav navbar nav-pills pull-right">
+          <li><a href="">Careers</a></li>
+          <li><a href="">GoRails Screencasts</a></li>
+          <li><a href="">Term &amp; Conditions</a></li>
+          <li><a href="">Privacy Policy</a></li>
+        </ul>
+
+      </div>
+      <p class="copy">&copy; 2013-2016 One Month, Inc</p>
+
+    </div>
+
+  </div>
 </body>
 </html>
