--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  </div>
 
    <div class="container">
-     <div class="center-video"> <img src="images/chris.jpg" alt=""></div>
+     <div class="center-video"> <img src="http://www.sas.com/content/dam/SAS/en_us/image/sas-com/video-thumbnails/driving-innovation-video-thumbnail.jpg" alt=""></div>
    </div>
   <div class="about-section">
   <div class="row">
@@ -102,6 +102,7 @@
 
   <div class="divider"></div>
 
+<div class="fontsize">
 	<div class="container">
 		<div class="image">
 			<img src="images/chris.jpg">
@@ -117,7 +118,7 @@
 			<p>Learn to code responsively. Write better code. Build faster websites. Feel better about yourself.<br><br>See you inside class!<br>Chris<br><br><em>Disclaimer: No amount of training will ever make your site look good in Internet Explorer 6.</em></p>
 		</div>
 	</div>
-	<div>
+
 
 	</div>
 
