--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  </div>
 
    <div class="container">
-     <div class="center-video"> <img src="http://www.sas.com/content/dam/SAS/en_us/image/sas-com/video-thumbnails/driving-innovation-video-thumbnail.jpg" alt=""></div>
+     <div class="center-video"> <img src="images/youtube.png" alt=""></div>
    </div>
   <div class="about-section">
   <div class="row">
